# Tasken

./: AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  QA_MATRIX.md  README.md  SECURITY.md  SPEC.md  STANDARDS.md  TEST_COVERAGE_MATRIX.md  clippy.toml  codecov.yml  gitleaks.toml
.agileplus/: worklog.md
.github/workflows/: auto-merge.yml  benchmarks.yml  cargo-deny.yml  ci.yml  pages-deploy.yml  pre-commit.yml  quality-gate.yml  release-drafter.yml  scorecard.yml  security-guard.yml  security.yml
docs/journeys/: index.md  quick-start.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
docs/worklogs/: ARCHITECTURE.md  GOVERNANCE.md  README.md  RESEARCH.md
python/: __init__.py  execute_task.py  manage_cliproxy.py  manage_models.py  manage_providers.py  package.json  pyproject.toml  run.py  run_harness.py  setup.py  task.py
src/: lib.rs
src/adapters/: mod.rs
src/adapters/plugins/: mod.rs
src/adapters/primary/: cli.rs  mod.rs
src/adapters/secondary/: memory.rs  mod.rs
src/application/: commands.rs  mod.rs  queries.rs  services.rs
src/domain/: errors.rs  events.rs  mod.rs  ports.rs  runners.rs  scheduler.rs  tasks.rs  workflows.rs
src/infrastructure/: error.rs  mod.rs
