[package]
name = "taskkit"
version = "0.1.0"
edition = "2021"
description = "Universal task execution framework with scheduling, workflow orchestration, and plugin support."
license = "MIT OR Apache-2.0"
authors = ["Phenotype <dev@phenotype.dev>"]
readme = "README.md"
repository = "https://github.com/phenotype-dev/Tasken"
documentation = "https://docs.rs/taskkit"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []

[workspace]
members = []
