[package]
name = "taskkit"
version = "0.1.0"
edition = "2021"
description = "Universal task execution framework with scheduling, workflow orchestration, and plugin support."
license = "MIT OR Apache-2.0"
authors = ["Phenotype <dev@phenotype.dev>"]
readme = "README.md"
repository = "https://github.com/phenotype-dev/Tasken"
documentation = "https://docs.rs/taskkit"
rust-version = "1.75"

[dependencies]
# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
